--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -75,8 +75,7 @@ rules: {
         },
       ],
     "@typescript-eslint/ban-ts-comment": "off",
-    # 相対importはエラーとする
-    "no-restricted-imports": ["error", { "patterns": ["./", "../"] }],
+    # Relative import is an error
     "@typescript-eslint/array-type": ["error", { "default": "array" }],
     "react/jsx-wrap-multilines":
       [
@@ -91,18 +90,8 @@ rules: {
           "prop": "ignore",
         },
       ],
-    # LinkコンポーネントでonClickを使えるようにする
-    "jsx-a11y/anchor-is-valid":
-      [
-        "error",
-        {
-          "components": ["Link"],
-          "specialLink": ["to"],
-          "aspects": ["noHref"],
-        },
-      ],
     "require-await": "error",
-    # enumを使用しない
+    # don't use enums
     "no-restricted-syntax":
       [
         "error",
@@ -113,11 +102,8 @@ rules: {
       ],
     "react-hooks/rules-of-hooks": "warn",
     "react-hooks/exhaustive-deps": "warn",
-    # 使用しないimportに警告
+    # Warn unused imports
     "unused-imports/no-unused-imports-ts": "warn",
-    "eqeqeq": ["error", "always"],
-    "import/no-cycle": "warn",
-    "import/no-named-as-default": "warn",
   }
 settings:
   {
